--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,10 @@ python/*operator*
 include/*operator*
 include/*graph*
 include/*cluster*
+include/*sparse*
+include/*cg*
 src/*operator*
 src/*graph*
 src/*cluster*
+src/*sparse*
+src/*cg*
