attempt to locate libblas for conda/travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,8 @@ install:
       conda create -q -n test-environment python=$PYTHON_VERSION numpy scipy nose gcc openblas;
     fi
   - source activate test-environment
+  - locate libblas.so
+  - locate libopenblas.so
   - ./install
 
 script:
