--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 os:
   - linux
-  - osx
+  # - osx
 
 env:
   # - PYTHON_VERSION="2.6"
@@ -28,7 +28,7 @@ install:
       conda create -q -n test-environment python=$PYTHON_VERSION numpy scipy nose gcc openblas;
     fi
   - source activate test-environment
-  - echo $PATH
+  - ls $HOME/miniconda/bin/
   - locate libblas.so
   - locate libopenblas.so
   - ./install
