--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,13 @@ env:
   - PYTHON_VERSION="2.7"
   # - PYTHON_VERSION="3.3"
   # - PYTHON_VERSION="3.4"
+
+sudo: required
+
+before_install:
+  - sudo apt-get -qq update
+  - sudo apt-get install -y mlocate libopenblas
+
 install:
   - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then
       wget http://repo.continuum.io/miniconda/Miniconda-latest-MacOSX-x86_64.sh 
