--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ sudo: required
 
 before_install:
   - sudo apt-get -qq update
-  - sudo apt-get install -y mlocate openblas
+  - sudo apt-get install -y mlocate 
 
 install:
   - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then
