--- a/.travis.yml
+++ b/.travis.yml
@@ -37,7 +37,7 @@ install:
     fi
   - source activate test-environment
   - echo $LD_LIBRARY_PATH  
-  - ln -s /usr/lib/libblas.so.3gf /usr/lib/libblas.so
+  - sudo ln -s /usr/lib/libblas.so.3gf /usr/lib/libblas.so
   - ./install
 
 script:
