attempt to locate test script for travis, 0.1

--- a/.travis.yml
+++ b/.travis.yml
@@ -37,7 +37,7 @@ install:
     fi
   - source activate test-environment
   - if [[ $TRAVIS_OS_NAME == 'linux' ]]; then
-      sudo ln -s /usr/lib/libblas.so.3gf /usr/lib/libblas.so
+      sudo ln -s /usr/lib/libblas.so.3gf /usr/lib/libblas.so;
     fi
   - ./install
 
