pass C tests on travis; check PY tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -43,9 +43,8 @@ install:
 
 script:
   - export OPTKIT_TEST_FLOAT=1 && export OPTKIT_TEST_TRANSPOSE=1
-  - pwd
-  - ls .
-  - ./test 5 && nosetests python/optkit/tests/python_bindings/ --nocapture
+  - ./test 5
+  - nosetests python/optkit/tests/python_bindings/ --nocapture
 
 branches:
   only:
