--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,10 @@ os:
   # - osx
 
 env:
-  # - PYTHON_VERSION="2.6"
   - PYTHON_VERSION="2.7"
-  # - PYTHON_VERSION="3.3"
+  - PYTHON_VERSION="3.3"
   # - PYTHON_VERSION="3.4"
+  # - PYTHON_VERSION="3.5"
 
 sudo: required
 
