--- a/.travis.yml
+++ b/.travis.yml
@@ -47,7 +47,16 @@ install:
 
 script:
   - export OPTKIT_TEST_FLOAT=1 && export OPTKIT_TEST_TRANSPOSE=1
-  - ./test 5
+  - ./test vector
+  - ./test matrix
+  - ./test dense
+  - ./test sparse
+  - ./test prox
+  - ./test operator
+  - ./test cg
+  - ./test equil
+  - ./test proj
+  - ./test pogs
   - nosetests python/optkit/tests/python_bindings/test_pogs_bindings.py --nocapture
   - nosetests python/optkit/tests/python_bindings/test_clustering_bindings.py --nocapture
   - nosetests python/optkit/tests/python_bindings/test_backend.py --nocapture
