--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,8 @@ os:
 env:
   - PYTHON_VERSION="2.7"
   - PYTHON_VERSION="3.3"
-  # - PYTHON_VERSION="3.4"
-  # - PYTHON_VERSION="3.5"
+  - PYTHON_VERSION="3.4"
+  - PYTHON_VERSION="3.5"
 
 sudo: required
 
