(CI) exclude python 3.3, 3.4 from dev CI testing
[ci skip]

--- a/.travis.yml
+++ b/.travis.yml
@@ -64,6 +64,13 @@ branches:
     - master
     - dev
 
+matrix:
+  exclude:
+    - branch: dev 
+      env: PYTHON_VERSION="3.3"
+    - branch: dev 
+      env: PYTHON_VERSION="3.4"
+
 notifications:
   email:
     - ungun@stanford.edu
