(CI) attempt to fix exclusions on dev branch testing

--- a/.travis.yml
+++ b/.travis.yml
@@ -66,9 +66,9 @@ branches:
 
 matrix:
   exclude:
-    - branch: dev 
+    - branches: dev 
       env: PYTHON_VERSION="3.3"
-    - branch: dev 
+    - branches: dev 
       env: PYTHON_VERSION="3.4"
 
 notifications:
