--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,12 @@
 os:
-  - linux
+  # - linux
   - osx
 
 env:
   - PYTHON_VERSION="2.7"
-  - PYTHON_VERSION="3.3"
-  - PYTHON_VERSION="3.4"
-  - PYTHON_VERSION="3.5"
+  # - PYTHON_VERSION="3.3"
+  # - PYTHON_VERSION="3.4"
+  # - PYTHON_VERSION="3.5"
 
 sudo: required
 
