--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 os:
   - linux
-  # - osx
+  - osx
 
 env:
   - PYTHON_VERSION="2.7"
@@ -11,12 +11,12 @@ env:
 sudo: required
 
 before_install:
-  - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then
+  - if [[ $TRAVIS_OS_NAME == 'linux' ]]; then
       sudo apt-get -qq update && sudo apt-get install -y mlocate;
     fi
 
 install:
-  - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then
+  - if [[ $TRAVIS_OS_NAME == 'linux' ]]; then
       sudo updatedb;
     fi 
   - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then
