add explicit Requirement already satisfied (use --upgrade to upgrade): six in /Users/Baris/anaconda2/envs/radplan35/lib/python3.5/site-packages instruction to travisCI script

--- a/.travis.yml
+++ b/.travis.yml
@@ -42,6 +42,7 @@ install:
       sudo ln -s /usr/lib/libblas.so.3gf /usr/lib/libblas.so;
     fi
   - ./install
+  - pip install six 
 
 script:
   - export OPTKIT_TEST_FLOAT=1 && export OPTKIT_TEST_TRANSPOSE=1
