--- a/.travis.yml
+++ b/.travis.yml
@@ -19,9 +19,14 @@ install:
   - if [[ $TRAVIS_OS_NAME == 'linux' ]]; then
       sudo updatedb;
     fi 
-  - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then
-      wget http://repo.continuum.io/miniconda/Miniconda-latest-MacOSX-x86_64.sh 
-      -O miniconda.sh;
+  - if [[ $TRAVIS_OS_NAME == 'osx' ]]; 
+      if [[ $PYTHON_VERSION == '2.7' ]]; then 
+        wget http://repo.continuum.io/miniconda/Miniconda2-latest-MacOSX-x86_64.sh 
+        -O miniconda.sh;
+      else
+        wget http://repo.continuum.io/miniconda/Miniconda3-latest-MacOSX-x86_64.sh 
+        -O miniconda.sh;
+      fi
     else
       wget http://repo.continuum.io/miniconda/Miniconda-latest-Linux-x86_64.sh 
       -O miniconda.sh;
