--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ install:
   - if [[ $TRAVIS_OS_NAME == 'linux' ]]; then
       sudo updatedb;
     fi 
-  - if [[ $TRAVIS_OS_NAME == 'osx' ]]; 
+  - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then  
       if [[ $PYTHON_VERSION == '2.7' ]]; then 
         wget http://repo.continuum.io/miniconda/Miniconda2-latest-MacOSX-x86_64.sh 
         -O miniconda.sh;
