--- a/.travis.yml
+++ b/.travis.yml
@@ -50,6 +50,7 @@ install:
   - pip install six 
 
 script:
+  # -./metatest --cpu
   - export OPTKIT_TEST_FLOAT=1 && export OPTKIT_TEST_TRANSPOSE=1
   - ./test vector
   - ./test matrix
