(CI) add anderson module to travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -57,6 +57,7 @@ script:
   - ./test dense
   - ./test sparse
   - ./test prox
+  - ./test anderson
   - ./test operator
   - ./test cg
   - ./test equil
